<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zenoh_carla_bridge</name>
  <version>0.0.0</version>
  <description>Zenoh bridge for CARLA simulator</description>
  <maintainer email="jerry73204@gmail.com">aeon</maintainer>
  <maintainer email="evshary@gmail.com">ChenYing Kuo</maintainer>
  <license>TODO: License declaration</license>

  <!-- <buildtool_depend>ament_cargo</buildtool_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cargo</build_type>
  </export>
</package>
